--- a/index.html
+++ b/index.html
@@ -9,63 +9,138 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/shared.css">
-
+  <link rel="stylesheet" href="css/shared_layout.css">
+  <link rel="stylesheet" href="css/index.css">
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
-  <script type="module" src="js/script.js"></script>
+  <script type="module" src="js/firebase.js"></script>
+  <script src="js/shared_layout.js"></script>
 
 </head>
 
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark _navbar-bg p-0">
-    <div class="container-fluid p-0">
-      <button class="navbar-toggler _navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand _navbar-brand" href="#">線上桌遊對戰</a>
-      <a class="_navbar-search align-self-center order-lg-1" href="#"><span class="iconify " data-icon="fa-solid:search"
-          style="color: #EFE7C9; font-size: 24px;"></span></a>
+<body class="d-flex flex-column justify-content-between h-100">
+  <div class="nav-ahr"></div>
 
-      <div class="collapse navbar-collapse _navbar-collapse w-100" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">首頁</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="news.html">最新消息</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">桌遊一覽</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">限時試玩</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">登入/註冊</a>
-          </li>
-        </ul>
+  <main class="container-fluid ">
+    <div class="d-flex flex-wrap">
+      <div class="_main">
+        <div class="_guide">
+          <span>
+            簡短網站引導
+            <br>
+            昆昆佃大什它國國是日它佃夾旨署累尖伯毋愜晒之毋灼廾國是日它佃夾旨署累尖伯毋愜晒之毋灼廾昆昆佃大什它國國是日它佃夾旨署累尖伯毋愜晒之毋灼廾署累尖伯毋愜晒之毋灼廾昆昆佃大什它國國是日它佃夾旨署累尖伯毋愜晒之毋灼廾昆昆佃大什它國國是日它佃夾旨署累尖伯毋愜晒之毋灼廾
+          </span>
+        </div>
+        <div class="_news w-100">
+          <span class="_news-title">最新消息</span>
+          <div id="carouselExampleCaptions" class="carousel slide carousel-dark" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner"">
+                <div class=" carousel-item active">
+              <img src="kks_box_front_520px.png" class="d-block w-100 " alt="">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="BaHotH 1.png" class="d-block w-100" alt="">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="kks_box_front_520px.png" class="d-block w-100" alt="">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <script>
+          let cl = new bootstrap.Carousel(document.querySelector('#carouselExampleCaptions'), {
+            interval: 5000,
+            wrap: true
+          });
+        </script>
       </div>
-
-      <!-- <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form> -->
     </div>
-  </nav>
 
-
-  <main>
-
+    <div class="_side py-2 py-md-0 ps-md-2">
+      <div class="_newgames">
+        <span class="_newgames-title">熱門新作</span>
+        <div class="_gamecards">
+          <a class="_gamecard" href="">
+            <img src="hOC 1.png" alt="">
+            <span>王冠之心</span>
+          </a>
+          <a class="_gamecard" href="">
+            <img src="hOC 1.png" alt="">
+            <span>王冠之心</span>
+          </a>
+          <a class="_gamecard" href="">
+            <img src="hOC 1.png" alt="">
+            <span>王冠之心</span>
+          </a>
+        </div>
+      </div>
+      <div class="_classic ">
+        <span class="_classic-title">經典必玩</span>
+        <div class="_gamecards">
+          <a class="_gamecard" href="">
+            <img src="hOC 1.png" alt="">
+            <span>王冠之心</span>
+          </a>
+        </div>
+      </div>
+      <div class="_trynow ">
+        <span class="_trynow-title">限時試玩</span>
+        <div class="_gamecards">
+          <a class="_gamecard" href="">
+            <img src="PotionExplosion 1.png" alt="">
+            <span>巫術學院</span>
+          </a>
+          <a class="_gamecard" href="">
+            <img src="hOC 1.png" alt="">
+            <span>王冠之心</span>
+          </a>
+          <a class="_gamecard" href="">
+            <img src="PotionExplosion 1.png" alt="">
+            <span>巫術學院</span>
+          </a>
+          <a class="_gamecard" href="">
+            <img src="PotionExplosion 1.png" alt="">
+            <span>巫術學院</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    </div>
   </main>
-  <footer>
 
-  </footer>
+  <div class="footer-ahr"></div>
 </body>
 
 </html>
