--- a/news.html
+++ b/news.html
@@ -9,63 +9,25 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/shared.css">
-
+    <link rel="stylesheet" href="css/shared_layout.css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/firebase.js"></script>
+    <script src="js/shared_layout.js"></script>
+
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark _navbar-bg">
-        <div class="container-fluid">
-            <button class="navbar-toggler _navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand _navbar-brand" href="#">線上桌遊對戰</a>
-            <a class="_navbar-search align-self-center order-lg-1" href="#"><span class="iconify "
-                    data-icon="fa-solid:search" style="color: #EFE7C9; font-size: 24px;"></span></a>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">首頁</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="news.html">最新消息</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">桌遊一覽</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">限時試玩</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">登入/註冊</a>
-                    </li>
-                </ul>
-            </div>
-
-            <!-- <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form> -->
-        </div>
-    </nav>
-
+    <div class="nav-ahr"></div>
 
     <main>
 
     </main>
-    <footer>
-
-    </footer>
+    <div class="footer-ahr"></div>
 </body>
 
 </html>
