--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             <span>王冠之心</span>
           </a>
         </div>
+        <a class="_detail-link" href="">看更多</a>
       </div>
       <div class="_classic ">
         <span class="_classic-title">經典必玩</span>
@@ -114,6 +115,7 @@
             <span>王冠之心</span>
           </a>
         </div>
+        <a class="_detail-link" href="">看更多</a>
       </div>
       <div class="_trynow ">
         <span class="_trynow-title">限時試玩</span>
