--- a/shared_layout.html
+++ b/shared_layout.html
@@ -20,16 +20,16 @@
                 </li>
                 <div class="_nav-sep"></div>
                 <li class="nav-item">
-                    <a class="nav-link _nav-link" href="#">桌遊一覽</a>
+                    <a class="nav-link _nav-link" href="games.html">桌遊一覽</a>
                 </li>
                 <div class="_nav-sep"></div>
                 <li class="nav-item">
-                    <a class="nav-link _nav-link" href="#">限時試玩</a>
+                    <a class="nav-link _nav-link" href="trynow.html">限時試玩</a>
                 </li>
                 <div class="_nav-sep"></div>
 
                 <li class="nav-item">
-                    <a class="nav-link _nav-link" href="#">登入/註冊</a>
+                    <a class="nav-link _nav-link" href="login_out.html">登入/註冊</a>
                 </li>
             </ul>
         </div>
