--- a/games.html
+++ b/games.html
@@ -17,29 +17,15 @@
     </script>
     <script type="module" src="js/firebase.js"></script>
     <script src="js/shared_layout.js"></script>
-    <link rel="stylesheet" href="css/news.css">
+
 
 </head>
 
 <body>
     <div class="nav-ahr"></div>
 
-    <main class="container-fluid">
-        <span class="_newgames-title">熱門新作</span>
-        <div class="_newscards">
-            <a class="_newscard" href="">
-                <img src="hOC 1.png" alt="">
-                <span>王冠之心</span>
-            </a>
-            <a class="_newscard" href="">
-                <img src="hOC 1.png" alt="">
-                <span>王冠之心</span>
-            </a>
-            <a class="_newscard" href="">
-                <img src="hOC 1.png" alt="">
-                <span>王冠之心</span>
-            </a>
-        </div>
+    <main>
+
     </main>
     <div class="footer-ahr"></div>
 </body>
