--- a/index.html
+++ b/index.html
@@ -45,100 +45,100 @@
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner"">
-                <div class=" carousel-item active">
-              <img src="kks_box_front_520px.png" class="d-block w-100 " alt="">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+            <div class="carousel-inner">
+              <div class=" carousel-item active">
+                <img src="kks_box_front_520px.png" class="d-block w-100 " alt="">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="BaHotH 1.png" class="d-block w-100" alt="">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="kks_box_front_520px.png" class="d-block w-100" alt="">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <img src="BaHotH 1.png" class="d-block w-100" alt="">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="kks_box_front_520px.png" class="d-block w-100" alt="">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+            <script>
+              let cl = new bootstrap.Carousel(document.querySelector('#carouselExampleCaptions'), {
+                interval: 5000,
+                wrap: true
+              });
+            </script>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
-        <script>
-          let cl = new bootstrap.Carousel(document.querySelector('#carouselExampleCaptions'), {
-            interval: 5000,
-            wrap: true
-          });
-        </script>
       </div>
-    </div>
 
-    <div class="_side py-2 py-md-0 ps-md-2">
-      <div class="_newgames">
-        <span class="_newgames-title">熱門新作</span>
-        <div class="_gamecards">
-          <a class="_gamecard" href="">
-            <img src="hOC 1.png" alt="">
-            <span>王冠之心</span>
-          </a>
-          <a class="_gamecard" href="">
-            <img src="hOC 1.png" alt="">
-            <span>王冠之心</span>
-          </a>
-          <a class="_gamecard" href="">
-            <img src="hOC 1.png" alt="">
-            <span>王冠之心</span>
-          </a>
+      <div class="_side py-2 py-md-0 ps-md-2">
+        <div class="_newgames">
+          <span class="_newgames-title">熱門新作</span>
+          <div class="_gamecards">
+            <a class="_gamecard" href="">
+              <img src="hOC 1.png" alt="">
+              <span>王冠之心</span>
+            </a>
+            <a class="_gamecard" href="">
+              <img src="hOC 1.png" alt="">
+              <span>王冠之心</span>
+            </a>
+            <a class="_gamecard" href="">
+              <img src="hOC 1.png" alt="">
+              <span>王冠之心</span>
+            </a>
+          </div>
+          <a class="_detail-link" href="">看更多</a>
         </div>
-        <a class="_detail-link" href="">看更多</a>
-      </div>
-      <div class="_classic ">
-        <span class="_classic-title">經典必玩</span>
-        <div class="_gamecards">
-          <a class="_gamecard" href="">
-            <img src="hOC 1.png" alt="">
-            <span>王冠之心</span>
-          </a>
+        <div class="_classic ">
+          <span class="_classic-title">經典必玩</span>
+          <div class="_gamecards">
+            <a class="_gamecard" href="">
+              <img src="hOC 1.png" alt="">
+              <span>王冠之心</span>
+            </a>
+          </div>
+          <a class="_detail-link" href="">看更多</a>
         </div>
-        <a class="_detail-link" href="">看更多</a>
-      </div>
-      <div class="_trynow ">
-        <span class="_trynow-title">限時試玩</span>
-        <div class="_gamecards">
-          <a class="_gamecard" href="">
-            <img src="PotionExplosion 1.png" alt="">
-            <span>巫術學院</span>
-          </a>
-          <a class="_gamecard" href="">
-            <img src="hOC 1.png" alt="">
-            <span>王冠之心</span>
-          </a>
-          <a class="_gamecard" href="">
-            <img src="PotionExplosion 1.png" alt="">
-            <span>巫術學院</span>
-          </a>
-          <a class="_gamecard" href="">
-            <img src="PotionExplosion 1.png" alt="">
-            <span>巫術學院</span>
-          </a>
+        <div class="_trynow ">
+          <span class="_trynow-title">限時試玩</span>
+          <div class="_gamecards">
+            <a class="_gamecard" href="">
+              <img src="PotionExplosion 1.png" alt="">
+              <span>巫術學院</span>
+            </a>
+            <a class="_gamecard" href="">
+              <img src="hOC 1.png" alt="">
+              <span>王冠之心</span>
+            </a>
+            <a class="_gamecard" href="">
+              <img src="PotionExplosion 1.png" alt="">
+              <span>巫術學院</span>
+            </a>
+            <a class="_gamecard" href="">
+              <img src="PotionExplosion 1.png" alt="">
+              <span>巫術學院</span>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
     </div>
   </main>
 
