--- a/games.html
+++ b/games.html
@@ -17,15 +17,87 @@
     </script>
     <script type="module" src="js/firebase.js"></script>
     <script src="js/shared_layout.js"></script>
-
+    <link rel="stylesheet" href="css/games.css">
 
 </head>
 
 <body>
     <div class="nav-ahr"></div>
 
-    <main>
-
+    <main class="container-fluid d-flex justify-content-center flex-column _games">
+        <span class="_page-title">桌遊一覽</span>
+        <select class="form-select" aria-label="Default select example">
+            <option value="-1" selected>選擇分類</option>
+            <option value="0">全部</option>
+            <option value="1">熱門新作</option>
+            <option value="2">經典必玩</option>
+        </select>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3 pt-2">
+            <a class="col _hot _card" href="games_detail.html?game=Avalon">
+                <div class="card  h-100">
+                    <img src="avalon 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">阿瓦隆</h5>
+                    </div>
+                </div>
+            </a>
+            <a class="col _hot _card" href="games_detail.html?game=Avalon">
+                <div class="card  h-100">
+                    <img src="avalon 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">阿瓦隆</h5>
+                    </div>
+                </div>
+            </a>
+            <a class="col _hot _card" href="games_detail.html?game=Avalon">
+                <div class="card  h-100">
+                    <img src="avalon 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">阿瓦隆</h5>
+                    </div>
+                </div>
+            </a>
+            <a class="col _hot _card" href="games_detail.html?game=Avalon">
+                <div class="card  h-100">
+                    <img src="avalon 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">阿瓦隆</h5>
+                    </div>
+                </div>
+            </a>
+            <a class="col _hot _card" href="games_detail.html?game=Avalon">
+                <div class="card  h-100">
+                    <img src="avalon 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">阿瓦隆</h5>
+                    </div>
+                </div>
+            </a>
+            <a class="col _hot _card" href="games_detail.html?game=Avalon">
+                <div class="card  h-100">
+                    <img src="avalon 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">阿瓦隆</h5>
+                    </div>
+                </div>
+            </a>
+            <a class="col _hot _card" href="games_detail.html?game=Avalon">
+                <div class="card  h-100">
+                    <img src="avalon 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">阿瓦隆</h5>
+                    </div>
+                </div>
+            </a>
+            <a class="col _hot _card" href="games_detail.html?game=Avalon">
+                <div class="card  h-100">
+                    <img src="avalon 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">阿瓦隆</h5>
+                    </div>
+                </div>
+            </a>
+        </div>
     </main>
     <div class="footer-ahr"></div>
 </body>
