--- a/news.html
+++ b/news.html
@@ -24,20 +24,67 @@
 <body>
     <div class="nav-ahr"></div>
 
-    <main class="container-fluid">
-        <span class="_newgames-title">熱門新作</span>
-        <div class="_newscards">
-            <a class="_newscard" href="">
-                <img src="hOC 1.png" alt="">
-                <span>王冠之心</span>
+    <main class="container-fluid d-flex justify-content-center flex-column _news">
+        <span class="_news-title">最新消息</span>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3 _newscards">
+            <a class="col" href="news_detail.html?news=kknews">
+                <div class="card _newscard h-100">
+                    <img src="kks_box_front_520px.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">卡卡頌20周年</h5>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">2021/12/1</small>
+                    </div>
+                </div>
             </a>
-            <a class="_newscard" href="">
-                <img src="hOC 1.png" alt="">
-                <span>王冠之心</span>
+            <a class="col" href="">
+                <div class="card _newscard h-100">
+                    <img src="hOC 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">本月限時試玩-巫術學院
+                            正式上線</h5>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">2021/12/1</small>
+                    </div>
+                </div>
             </a>
-            <a class="_newscard" href="">
-                <img src="hOC 1.png" alt="">
-                <span>王冠之心</span>
+            <a class="col" href="">
+                <div class="card _newscard h-100">
+                    <img src="BaHotH 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">本月限時試玩-巫術學院
+                            正式上線</h5>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">2021/12/1</small>
+                    </div>
+                </div>
+            </a>
+            <a class="col" href="">
+                <div class="card _newscard h-100">
+                    <img src="PotionExplosion 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">本月限時試玩-巫術學院
+                            正式上線</h5>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">2021/12/1</small>
+                    </div>
+                </div>
+            </a>
+            <a class="col" href="">
+                <div class="card _newscard h-100">
+                    <img src="PotionExplosion 1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">本月限時試玩-巫術學院
+                            正式上線</h5>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">2021/12/1</small>
+                    </div>
+                </div>
             </a>
         </div>
     </main>
