--- a/index.html
+++ b/index.html
@@ -47,26 +47,32 @@
             </div>
             <div class="carousel-inner">
               <div class=" carousel-item active">
-                <img src="kks_box_front_520px.png" class="d-block w-100 " alt="">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-                </div>
+                <a href="#">
+                  <img src="kks_box_front_520px.png" class="d-block w-100 " alt="">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                  </div>
+                </a>
               </div>
               <div class="carousel-item">
-                <img src="BaHotH 1.png" class="d-block w-100" alt="">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
+                <a href="#">
+                  <img src="BaHotH 1.png" class="d-block w-100" alt="">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                  </div>
+                </a>
               </div>
               <div class="carousel-item">
-                <img src="kks_box_front_520px.png" class="d-block w-100" alt="">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
+                <a href="#">
+                  <img src="kks_box_front_520px.png" class="d-block w-100" alt="">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                  </div>
               </div>
+              </a>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
               data-bs-slide="prev">
@@ -105,7 +111,7 @@
               <span>王冠之心</span>
             </a>
           </div>
-          <a class="_detail-link" href="">看更多</a>
+          <a class="_detail-link" href="games.html">看更多</a>
         </div>
         <div class="_classic ">
           <span class="_classic-title">經典必玩</span>
@@ -115,7 +121,7 @@
               <span>王冠之心</span>
             </a>
           </div>
-          <a class="_detail-link" href="">看更多</a>
+          <a class="_detail-link" href="games.html">看更多</a>
         </div>
         <div class="_trynow ">
           <span class="_trynow-title">限時試玩</span>
