basic firebase test & news stuff

--- a/games.html
+++ b/games.html
@@ -25,8 +25,8 @@
     <div class="nav-ahr"></div>
 
     <main class="container-fluid d-flex justify-content-center flex-column _games">
-        <span class="_page-title">桌遊一覽</span>
-        <select class="form-select" aria-label="Default select example">
+        <span class="_page-title my-2">桌遊一覽</span>
+        <select class="form-select _select" aria-label="Default select example">
             <option value="-1" selected>選擇分類</option>
             <option value="0">全部</option>
             <option value="1">熱門新作</option>
