--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
     <div class="nav-ahr"></div>
 
     <main class="container-fluid d-flex justify-content-center flex-column _news">
-        <span class="_news-title">最新消息</span>
+        <span class="_news-title my-2">最新消息</span>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3 _newscards">
             <a class="col" href="news_detail.html?news=kknews">
                 <div class="card _newscard h-100">
