--- a/shared_layout.html
+++ b/shared_layout.html
@@ -29,7 +29,7 @@
                 <div class="_nav-sep"></div>
 
                 <li class="nav-item">
-                    <a class="nav-link _nav-link" href="login_out.html">登入/註冊</a>
+                    <a class="nav-link _nav-link" href="login.html">登入/註冊</a>
                 </li>
             </ul>
         </div>
