--- a/trynow.html
+++ b/trynow.html
@@ -17,6 +17,7 @@
     </script>
     <script type="module" src="js/firebase.js"></script>
     <script src="js/shared_layout.js"></script>
+    <link rel="stylesheet" href="css/trynow.css">
 
 
 </head>
@@ -25,7 +26,26 @@
     <div class="nav-ahr"></div>
 
     <main>
+        <main class="container-fluid d-flex flex-column justify-content-center align-items-center _trynow">
+            <span class="_news-detail-title my-2">限時試玩</span>
 
+            <div class="card pt-2 _card">
+                <div class=" row g-0 pb-2 ">
+                    <div class="col-md-6 d-flex justify-content-center">
+                        <img src="PotionExplosion 1.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-6 d-flex flex-column">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title _card-title">巫術學院</h5>
+                            <p class="card-text _card-text">
+                                簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介簡介</p>
+                        </div>
+                        <a class="_detail-link" href="#">試玩看看</a>
+                    </div>
+                </div>
+            </div>
+
+        </main>
     </main>
     <div class="footer-ahr"></div>
 </body>
