--- a/games_detail.html
+++ b/games_detail.html
@@ -49,7 +49,7 @@
         </div>
         <span class="_news-detail-title">桌遊介紹</span>
 
-        <div class="card mb-3 pt-2 _card">
+        <div class="card my-2 pt-2 _card">
             <div class=" row g-0 pb-2">
                 <div class="col-md-4 d-flex justify-content-center">
                     <img src="avalon 1.png" class="img-fluid rounded-start" alt="...">
