--- a/news_detail.html
+++ b/news_detail.html
@@ -49,7 +49,7 @@
         </div>
         <span class="_news-detail-title">消息詳情</span>
 
-        <div class="card mb-3 pt-2 _card">
+        <div class="card my-2 pt-2 _card">
             <div class=" row g-0 pb-2">
                 <div class="col-md-8 d-flex justify-content-center">
                     <img src="kks_box_front_520px.png" class="img-fluid rounded-start" alt="...">
