--- a/games.html
+++ b/games.html
@@ -15,88 +15,121 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script type="module" src="js/firebase.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+
     <script src="js/shared_layout.js"></script>
     <link rel="stylesheet" href="css/games.css">
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBeOEuEKJ6RIxlYjUyAyImN6dp63zvAE4k",
+            authDomain: "f2e-final-16079.firebaseapp.com",
+            projectId: "f2e-final-16079",
+            storageBucket: "f2e-final-16079.appspot.com",
+            messagingSenderId: "717088954690",
+            appId: "1:717088954690:web:7a3f336707928485cf10db",
+            measurementId: "G-QY4TYEPS8K"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
 
+        let db = firebase.firestore();
+        let storage = firebase.storage();
+        let newsRef = db.collection("boardgame-content");
+        $(function () {
+
+            const $gamecards = $("#game-cards");
+            //get games
+            newsRef.get().then((querySnapshot) => {
+                if (!querySnapshot.empty) {
+                    $("#prespin").addClass("d-none");
+                } else {
+                    console.log("no games");
+                }
+                querySnapshot.forEach((doc) => {
+                    const data = doc.data();
+                    console.log(data);
+                    let tag = "";
+                    if (data.tag == "經典") {
+                        tag = "_classic";
+                    } else if (data.tag == "熱門") {
+                        tag = "_hot";
+                    }
+                    //place news
+                    $gamecards.append(
+                        `
+                        <a class="col ${tag} _card" href="games_detail.html?game=${doc.id}">
+                            <div class="card  h-100">
+                                <div class="_spinner">
+                                   <div class="spinner-border text-dark" role="status">
+                                     <span class="visually-hidden">Loading...</span>
+                                   </div>
+                               </div>
+                                <img class="card-img-top d-none" id="img-game-${doc.id}" alt="...">
+                                <div class="card-body d-flex align-items-end justify-content-center">
+                                    <h5 class="card-title">${data.title}</h5>
+                                </div>
+                            </div>
+                        </a>
+                        `
+                    );
+                    var gsReference = storage.ref(data.image);
+                    gsReference.getDownloadURL()
+                        .then((url) => {
+                            // Or inserted into an <img> element
+                            $(`#img-game-${doc.id}`).attr("src", url).removeClass(
+                                    "d-none")
+                                .siblings("._spinner")
+                                .addClass(
+                                    "d-none");
+                        })
+                        .catch((error) => {
+                            // Handle any errors
+                        });
+                });
+            }).catch((e) => {
+                console.log(e);
+
+
+            });
+            //selector
+            $("#select-tag").change(() => {
+                let currentTag = $(this).find("option:selected").val();
+                if (currentTag == "hot") {
+                    $gamecards.find("._card").addClass("d-none");
+                    $gamecards.find("._hot").removeClass("d-none");
+
+                } else if (currentTag == "classic") {
+                    $gamecards.find("._card").addClass("d-none");
+                    $gamecards.find("._classic").removeClass("d-none");
+                } else {
+                    $gamecards.find("._card").removeClass("d-none");
+                }
+            });
+        });
+    </script>
 </head>
 
 <body>
     <div class="nav-ahr"></div>
 
-    <main class="container-fluid d-flex justify-content-center flex-column _games">
+    <main class="container-fluid d-flex flex-column _games">
         <span class="_page-title my-2">桌遊一覽</span>
-        <select class="form-select _select" aria-label="Default select example">
-            <option value="-1" selected>選擇分類</option>
-            <option value="0">全部</option>
-            <option value="1">熱門新作</option>
-            <option value="2">經典必玩</option>
+        <select class="form-select _select" id="select-tag" aria-label="Default select example">
+            <option value="all" selected>選擇分類</option>
+            <option value="all">全部</option>
+            <option value="hot">熱門新作</option>
+            <option value="classic">經典必玩</option>
         </select>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3 pt-2">
-            <a class="col _hot _card" href="games_detail.html?game=Avalon">
-                <div class="card  h-100">
-                    <img src="avalon 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">阿瓦隆</h5>
-                    </div>
-                </div>
-            </a>
-            <a class="col _hot _card" href="games_detail.html?game=Avalon">
-                <div class="card  h-100">
-                    <img src="avalon 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">阿瓦隆</h5>
-                    </div>
-                </div>
-            </a>
-            <a class="col _hot _card" href="games_detail.html?game=Avalon">
-                <div class="card  h-100">
-                    <img src="avalon 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">阿瓦隆</h5>
-                    </div>
-                </div>
-            </a>
-            <a class="col _hot _card" href="games_detail.html?game=Avalon">
-                <div class="card  h-100">
-                    <img src="avalon 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">阿瓦隆</h5>
-                    </div>
-                </div>
-            </a>
-            <a class="col _hot _card" href="games_detail.html?game=Avalon">
-                <div class="card  h-100">
-                    <img src="avalon 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">阿瓦隆</h5>
-                    </div>
-                </div>
-            </a>
-            <a class="col _hot _card" href="games_detail.html?game=Avalon">
-                <div class="card  h-100">
-                    <img src="avalon 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">阿瓦隆</h5>
-                    </div>
-                </div>
-            </a>
-            <a class="col _hot _card" href="games_detail.html?game=Avalon">
-                <div class="card  h-100">
-                    <img src="avalon 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">阿瓦隆</h5>
-                    </div>
-                </div>
-            </a>
-            <a class="col _hot _card" href="games_detail.html?game=Avalon">
-                <div class="card  h-100">
-                    <img src="avalon 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">阿瓦隆</h5>
-                    </div>
-                </div>
-            </a>
+        <div class="_spinner" id="prespin">
+            <div class="spinner-border text-dark" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3 pt-2" id="game-cards">
+
         </div>
     </main>
     <div class="footer-ahr"></div>
