--- a/games_detail.html
+++ b/games_detail.html
@@ -15,24 +15,56 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script type="module" src="js/firebase.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+
     <script src="js/shared_layout.js"></script>
     <link rel="stylesheet" href="css/games_detail.css">
     <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBeOEuEKJ6RIxlYjUyAyImN6dp63zvAE4k",
+            authDomain: "f2e-final-16079.firebaseapp.com",
+            projectId: "f2e-final-16079",
+            storageBucket: "f2e-final-16079.appspot.com",
+            messagingSenderId: "717088954690",
+            appId: "1:717088954690:web:7a3f336707928485cf10db",
+            measurementId: "G-QY4TYEPS8K"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+
+        let db = firebase.firestore();
+        let storage = firebase.storage();
+        let gameRef = db.collection("boardgame-content");
         const params = new URLSearchParams(window.location.search);
         const game = params.get("game");
         // alert((livers.find(e => e.name == liver)).desc);
         $(function () {
-            // let index = livers.findIndex(e => e.name == liver);
-            // $("#liver-img").attr("src", `img/liverdetail/liverdetail_image${index+1}.webp`);
-            // $(".content-box-name").html(liver);
-            // $(".content-box-desc").html(livers[index].desc);
-            // $(".prev>a").attr("href", `liver_detail.html?liver=${livers[index>0?index-1:0].name}`);
-            // $(".next>a").attr("href",
-            //     `liver_detail.html?liver=${livers[index<livers.length-1?index+1:livers.length-1].name}`);
-            // $("#yt-link").attr("href", `${livers[index].yt}`);
-            // $("#tw-link").attr("href", `${livers[index].tw}`);
-            console.log(game);
+            gameRef.doc(`${game}`).get().then((doc) => {
+                const data = doc.data();
+                $("#game-title").html(`${data.title}`);
+                $("#game-desc").html(`${data.description}`);
+                if (data.try == true) {
+
+                    $("#game-link").removeClass("d-none").attr("href", `trynow.html?game=${game}`);
+                }
+
+                //get img
+                var gsReference = storage.ref(data.image);
+                gsReference.getDownloadURL()
+                    .then((url) => {
+                        // Or inserted into an <img> element
+                        $(`#game-img`).attr("src", url).removeClass("d-none")
+                            .siblings("._spinner")
+                            .addClass(
+                                "d-none");
+                    })
+                    .catch((error) => {
+                        // Handle any errors
+                    });
+            }).catch((e) => console.log(e));
         });
     </script>
 </head>
@@ -52,14 +84,25 @@
         <div class="card my-2 pt-2 _card">
             <div class=" row g-0 pb-2">
                 <div class="col-md-4 d-flex justify-content-center">
-                    <img src="avalon 1.png" class="img-fluid rounded-start" alt="...">
+                    <div class="_spinner">
+                        <div class="spinner-border text-dark" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
+                    <img class="img-fluid rounded-start d-none" id="game-img" alt="...">
                 </div>
                 <div class="col-md-8 d-flex flex-column">
                     <div class="card-body d-flex flex-column">
-                        <h5 class="card-title _card-title">阿瓦隆</h5>
-                        <p class="card-text _card-text">經典的陣營類遊戲，在雙方的爾虞我詐下遠征究竟能否成功呢</p>
+                        <h5 class="card-title _card-title" id="game-title">
+                            <div class="_spinner">
+                                <div class="spinner-border text-dark" role="status">
+                                    <span class="visually-hidden">Loading...</span>
+                                </div>
+                            </div>
+                        </h5>
+                        <p class="card-text _card-text" id="game-desc"></p>
                     </div>
-                    <a class="_detail-link" href="#">試玩看看</a>
+                    <a class="_detail-link d-none" id="game-link" href="#">試玩看看</a>
                 </div>
             </div>
         </div>
