--- a/news.html
+++ b/news.html
@@ -15,77 +15,97 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script type="module" src="js/firebase.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+
     <script src="js/shared_layout.js"></script>
     <link rel="stylesheet" href="css/news.css">
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBeOEuEKJ6RIxlYjUyAyImN6dp63zvAE4k",
+            authDomain: "f2e-final-16079.firebaseapp.com",
+            projectId: "f2e-final-16079",
+            storageBucket: "f2e-final-16079.appspot.com",
+            messagingSenderId: "717088954690",
+            appId: "1:717088954690:web:7a3f336707928485cf10db",
+            measurementId: "G-QY4TYEPS8K"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
 
+        let db = firebase.firestore();
+        let storage = firebase.storage();
+        let newsRef = db.collection("news-content");
+        $(function () {
+            const $newscards = $("._newscards");
+            //get news
+            newsRef.get().then((querySnapshot) => {
+                if (!querySnapshot.empty) {
+                    $("#prespin").addClass("d-none");
+                } else {
+                    console.log("no news");
+                }
+                querySnapshot.forEach((doc) => {
+                    const data = doc.data();
+                    console.log(data);
+                    const date = data.time.toDate();
+                    console.log(date);
+                    //place news
+                    $newscards.append(
+                        `
+                        <a class="col" href="news_detail.html?news=${doc.id}">
+                            <div class="card _newscard h-100">
+                                <div class="_spinner">
+                                   <div class="spinner-border text-dark" role="status">
+                                     <span class="visually-hidden">Loading...</span>
+                                   </div>
+                               </div>
+                                <img class="card-img-top d-none" id="img-news-${doc.id}" alt="...">
+                                <div class="card-body d-flex align-items-end justify-content-center">
+                                    <h5 class="card-title">${data.title}</h5>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">${date.getFullYear()}/${date.getMonth()+1}/${date.getDate()}</small>
+                                </div>
+                            </div>
+                        </a>
+                        `
+                    );
+                    var gsReference = storage.ref(data.image);
+                    gsReference.getDownloadURL()
+                        .then((url) => {
+                            // Or inserted into an <img> element
+                            $(`#img-news-${doc.id}`).attr("src", url).removeClass("d-none")
+                                .siblings("._spinner")
+                                .addClass(
+                                    "d-none");
+                        })
+                        .catch((error) => {
+                            // Handle any errors
+                        });
+                });
+            }).catch((e) => {
+                console.log(e);
+
+
+            });
+        });
+    </script>
 </head>
 
 <body>
     <div class="nav-ahr"></div>
 
-    <main class="container-fluid d-flex justify-content-center flex-column _news">
+    <main class="container-fluid d-flex flex-column _news">
         <span class="_news-title my-2">最新消息</span>
+        <div class="_spinner" id="prespin">
+            <div class="spinner-border text-dark" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3 _newscards">
-            <a class="col" href="news_detail.html?news=kknews">
-                <div class="card _newscard h-100">
-                    <img src="kks_box_front_520px.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">卡卡頌20周年</h5>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">2021/12/1</small>
-                    </div>
-                </div>
-            </a>
-            <a class="col" href="">
-                <div class="card _newscard h-100">
-                    <img src="hOC 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">本月限時試玩-巫術學院
-                            正式上線</h5>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">2021/12/1</small>
-                    </div>
-                </div>
-            </a>
-            <a class="col" href="">
-                <div class="card _newscard h-100">
-                    <img src="BaHotH 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">本月限時試玩-巫術學院
-                            正式上線</h5>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">2021/12/1</small>
-                    </div>
-                </div>
-            </a>
-            <a class="col" href="">
-                <div class="card _newscard h-100">
-                    <img src="PotionExplosion 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">本月限時試玩-巫術學院
-                            正式上線</h5>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">2021/12/1</small>
-                    </div>
-                </div>
-            </a>
-            <a class="col" href="">
-                <div class="card _newscard h-100">
-                    <img src="PotionExplosion 1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">本月限時試玩-巫術學院
-                            正式上線</h5>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">2021/12/1</small>
-                    </div>
-                </div>
-            </a>
         </div>
     </main>
     <div class="footer-ahr"></div>
